update: configmap.yaml for temporal server ( set server configs )

--- a/k8s/temporal/server/configmap.yaml
+++ b/k8s/temporal/server/configmap.yaml
@@ -5,6 +5,95 @@ metadata:
   namespace: temporal
 data:
   config_template.yaml: |-
+    log:
+      stdout: true
+      level: "debug,info"
+
+    persistence:
+      defaultStore: default
+      visibilityStore: visibility
+      numHistoryShards: 512
+      datastores:
+        default:
+          cassandra:
+            hosts: "hello-temporalio-temporal-cassandra.temporal.svc.cluster.local,"
+            port: 9042
+            password: "{{ .Env.TEMPORAL_STORE_PASSWORD }}"
+            consistency:
+              default:
+                consistency: local_quorum
+                serialConsistency: local_serial
+            keyspace: temporal
+            replicationFactor: 1
+            user: user
+        visibility:
+          cassandra:
+            hosts: "hello-temporalio-temporal-cassandra.temporal.svc.cluster.local,"
+            port: 9042
+            password: "{{ .Env.TEMPORAL_VISIBILITY_STORE_PASSWORD }}"
+            consistency:
+              default:
+                consistency: local_quorum
+                serialConsistency: local_serial
+            keyspace: temporal_visibility
+            replicationFactor: 1
+            user: user
+
+    global:
+      membership:
+        name: temporal
+        maxJoinDuration: 30s
+        broadcastAddress: {{ default .Env.POD_IP "0.0.0.0" }}
+      pprof:
+        port: 7936
+
+    services:
+      frontend:
+        rpc:
+          grpcPort: 7233
+          membershipPort: 6933
+          bindOnIP: "0.0.0.0"
+      history:
+        rpc:
+          grpcPort: 7234
+          membershipPort: 6934
+          bindOnIP: "0.0.0.0"
+      matching:
+        rpc:
+          grpcPort: 7235
+          membershipPort: 6935
+          bindOnIP: "0.0.0.0"
+      worker:
+        rpc:
+          grpcPort: 7239
+          membershipPort: 6939
+          bindOnIP: "0.0.0.0"
+
+    clusterMetadata:
+      enableGlobalDomain: false
+      failoverVersionIncrement: 10
+      masterClusterName: "active"
+      currentClusterName: "active"
+      clusterInformation:
+        active:
+          enabled: true
+          initialFailoverVersion: 1
+          rpcName: "temporal-frontend"
+          rpcAddress: "127.0.0.1:7933"
+
+    dcRedirectionPolicy:
+      policy: "noop"
+      toDC: ""
+
+    archival:
+      status: "disabled"
+
+    publicClient:
+      hostPort: "hello-temporalio-temporal-frontend:7233"
+
+    dynamicConfigClient:
+      filepath: "/etc/temporal/dynamic_config/dynamic_config.yaml"
+      pollInterval: "10s"
 ---
 apiVersion: v1
 kind: ConfigMap
@@ -13,6 +102,95 @@ metadata:
   namespace: temporal
 data:
   config_template.yaml: |-
+    log:
+      stdout: true
+      level: "debug,info"
+
+    persistence:
+      defaultStore: default
+      visibilityStore: visibility
+      numHistoryShards: 512
+      datastores:
+        default:
+          cassandra:
+            hosts: "hello-temporalio-temporal-cassandra.temporal.svc.cluster.local,"
+            port: 9042
+            password: "{{ .Env.TEMPORAL_STORE_PASSWORD }}"
+            consistency:
+              default:
+                consistency: local_quorum
+                serialConsistency: local_serial
+            keyspace: temporal
+            replicationFactor: 1
+            user: user
+        visibility:
+          cassandra:
+            hosts: "hello-temporalio-temporal-cassandra.temporal.svc.cluster.local,"
+            port: 9042
+            password: "{{ .Env.TEMPORAL_VISIBILITY_STORE_PASSWORD }}"
+            consistency:
+              default:
+                consistency: local_quorum
+                serialConsistency: local_serial
+            keyspace: temporal_visibility
+            replicationFactor: 1
+            user: user
+
+    global:
+      membership:
+        name: temporal
+        maxJoinDuration: 30s
+        broadcastAddress: {{ default .Env.POD_IP "0.0.0.0" }}
+      pprof:
+        port: 7936
+
+    services:
+      frontend:
+        rpc:
+          grpcPort: 7233
+          membershipPort: 6933
+          bindOnIP: "0.0.0.0"
+      history:
+        rpc:
+          grpcPort: 7234
+          membershipPort: 6934
+          bindOnIP: "0.0.0.0"
+      matching:
+        rpc:
+          grpcPort: 7235
+          membershipPort: 6935
+          bindOnIP: "0.0.0.0"
+      worker:
+        rpc:
+          grpcPort: 7239
+          membershipPort: 6939
+          bindOnIP: "0.0.0.0"
+
+    clusterMetadata:
+      enableGlobalDomain: false
+      failoverVersionIncrement: 10
+      masterClusterName: "active"
+      currentClusterName: "active"
+      clusterInformation:
+        active:
+          enabled: true
+          initialFailoverVersion: 1
+          rpcName: "temporal-frontend"
+          rpcAddress: "127.0.0.1:7933"
+
+    dcRedirectionPolicy:
+      policy: "noop"
+      toDC: ""
+
+    archival:
+      status: "disabled"
+
+    publicClient:
+      hostPort: "hello-temporalio-temporal-frontend:7233"
+
+    dynamicConfigClient:
+      filepath: "/etc/temporal/dynamic_config/dynamic_config.yaml"
+      pollInterval: "10s"
 ---
 apiVersion: v1
 kind: ConfigMap
@@ -21,6 +199,95 @@ metadata:
   namespace: temporal
 data:
   config_template.yaml: |-
+    log:
+      stdout: true
+      level: "debug,info"
+
+    persistence:
+      defaultStore: default
+      visibilityStore: visibility
+      numHistoryShards: 512
+      datastores:
+        default:
+          cassandra:
+            hosts: "hello-temporalio-temporal-cassandra.temporal.svc.cluster.local,"
+            port: 9042
+            password: "{{ .Env.TEMPORAL_STORE_PASSWORD }}"
+            consistency:
+              default:
+                consistency: local_quorum
+                serialConsistency: local_serial
+            keyspace: temporal
+            replicationFactor: 1
+            user: user
+        visibility:
+          cassandra:
+            hosts: "hello-temporalio-temporal-cassandra.temporal.svc.cluster.local,"
+            port: 9042
+            password: "{{ .Env.TEMPORAL_VISIBILITY_STORE_PASSWORD }}"
+            consistency:
+              default:
+                consistency: local_quorum
+                serialConsistency: local_serial
+            keyspace: temporal_visibility
+            replicationFactor: 1
+            user: user
+
+    global:
+      membership:
+        name: temporal
+        maxJoinDuration: 30s
+        broadcastAddress: {{ default .Env.POD_IP "0.0.0.0" }}
+      pprof:
+        port: 7936
+
+    services:
+      frontend:
+        rpc:
+          grpcPort: 7233
+          membershipPort: 6933
+          bindOnIP: "0.0.0.0"
+      history:
+        rpc:
+          grpcPort: 7234
+          membershipPort: 6934
+          bindOnIP: "0.0.0.0"
+      matching:
+        rpc:
+          grpcPort: 7235
+          membershipPort: 6935
+          bindOnIP: "0.0.0.0"
+      worker:
+        rpc:
+          grpcPort: 7239
+          membershipPort: 6939
+          bindOnIP: "0.0.0.0"
+
+    clusterMetadata:
+      enableGlobalDomain: false
+      failoverVersionIncrement: 10
+      masterClusterName: "active"
+      currentClusterName: "active"
+      clusterInformation:
+        active:
+          enabled: true
+          initialFailoverVersion: 1
+          rpcName: "temporal-frontend"
+          rpcAddress: "127.0.0.1:7933"
+
+    dcRedirectionPolicy:
+      policy: "noop"
+      toDC: ""
+
+    archival:
+      status: "disabled"
+
+    publicClient:
+      hostPort: "hello-temporalio-temporal-frontend:7233"
+
+    dynamicConfigClient:
+      filepath: "/etc/temporal/dynamic_config/dynamic_config.yaml"
+      pollInterval: "10s"
 ---
 apiVersion: v1
 kind: ConfigMap
@@ -29,3 +296,91 @@ metadata:
   namespace: temporal
 data:
   config_template.yaml: |-
+    log:
+      stdout: true
+      level: "debug,info"
+
+    persistence:
+      defaultStore: default
+      visibilityStore: visibility
+      numHistoryShards: 512
+      datastores:
+        default:
+          cassandra:
+            hosts: "hello-temporalio-temporal-cassandra.temporal.svc.cluster.local,"
+            port: 9042
+            password: "{{ .Env.TEMPORAL_STORE_PASSWORD }}"
+            consistency:
+              default:
+                consistency: local_quorum
+                serialConsistency: local_serial
+            keyspace: temporal
+            replicationFactor: 1
+            user: user
+        visibility:
+          cassandra:
+            hosts: "hello-temporalio-temporal-cassandra.temporal.svc.cluster.local,"
+            port: 9042
+            password: "{{ .Env.TEMPORAL_VISIBILITY_STORE_PASSWORD }}"
+            consistency:
+              default:
+                consistency: local_quorum
+                serialConsistency: local_serial
+            keyspace: temporal_visibility
+            replicationFactor: 1
+            user: user
+
+    global:
+      membership:
+        name: temporal
+        maxJoinDuration: 30s
+        broadcastAddress: {{ default .Env.POD_IP "0.0.0.0" }}
+      pprof:
+        port: 7936
+
+    services:
+      frontend:
+        rpc:
+          grpcPort: 7233
+          membershipPort: 6933
+          bindOnIP: "0.0.0.0"
+      history:
+        rpc:
+          grpcPort: 7234
+          membershipPort: 6934
+          bindOnIP: "0.0.0.0"
+      matching:
+        rpc:
+          grpcPort: 7235
+          membershipPort: 6935
+          bindOnIP: "0.0.0.0"
+      worker:
+        rpc:
+          grpcPort: 7239
+          membershipPort: 6939
+          bindOnIP: "0.0.0.0"
+    clusterMetadata:
+      enableGlobalDomain: false
+      failoverVersionIncrement: 10
+      masterClusterName: "active"
+      currentClusterName: "active"
+      clusterInformation:
+        active:
+          enabled: true
+          initialFailoverVersion: 1
+          rpcName: "temporal-frontend"
+          rpcAddress: "127.0.0.1:7933"
+
+    dcRedirectionPolicy:
+      policy: "noop"
+      toDC: ""
+
+    archival:
+      status: "disabled"
+
+    publicClient:
+      hostPort: "hello-temporalio-temporal-frontend:7233"
+
+    dynamicConfigClient:
+      filepath: "/etc/temporal/dynamic_config/dynamic_config.yaml"
+      pollInterval: "10s"
