fix: separate api into worker and workflow

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,6 +1,8 @@
 FROM golang:1.18 as build-env
 
-ENV APPDIR=$GOPATH/src/github.com/hyorimitsu/hello-temporal.io/api \
+ARG TARGET="default"
+
+ENV APPDIR=$GOPATH/src/github.com/hyorimitsu/hello-temporal.io/app \
     CGO_ENABLED=0 \
     GOOS=linux
 
@@ -10,7 +12,7 @@ COPY . $APPDIR/
 RUN go mod download
 RUN go mod verify
 
-RUN go build -ldflags "-s -w" -o /app $APPDIR/cmd/main.go
+RUN go build -ldflags "-s -w" -o /app $APPDIR/cmd/$TARGET/main.go
 
 FROM gcr.io/distroless/static
 
