--- a/k8s/app/worker/deployment.yaml
+++ b/k8s/app/worker/deployment.yaml
@@ -18,3 +18,8 @@ spec:
       containers:
         - name: hello-temporalio-app-worker
           image: hello-temporalio-app-worker:latest
+          env:
+            - name: PORT
+              value: "9000"
+            - name: TEMPORAL_GRPC_ENDPOINT
+              value: "hello-temporalio-temporal-frontend.temporal.svc:7233"
