--- a/k8s/app/workflow/deployment.yaml
+++ b/k8s/app/workflow/deployment.yaml
@@ -18,3 +18,8 @@ spec:
       containers:
         - name: hello-temporalio-app-workflow
           image: hello-temporalio-app-workflow:latest
+          env:
+            - name: PORT
+              value: "9001"
+            - name: TEMPORAL_GRPC_ENDPOINT
+              value: "hello-temporalio-temporal-frontend.temporal.svc:7233"
